--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <p>Minecraft là một trò chơi điện tử thuộc thể loại game sandbox, 1 nhánh của thế giới mở. Markus “Notch” Persson - một lập trình viên người Thụy Điển đã khai sinh ra nó và phát hành phiên bản đầu tiên trên TIGSource vào ngày 17/5/2009. Về sau game tiếp tục được phát triển và phát hành bởi Mojang vào năm 2011. Đến năm 2014 Minecraft được Microsoft mua lại bản quyền. Hiện tại game được phát hành bởi Xbox Game Studios.</p>
             <p>Nếu bạn là một fan của Minecraft, hãy khám phá thêm về thế giới đầy màu sắc này!</p>
         </div>
-        <img class="minecraft-img" src="C:\Users\admin\Downloads\Minecraft.webp" alt="Minecraft Image">
+        <img class="minecraft-img" src="Minecraft.webp" alt="Minecraft Image">
     </div>
 </body>
 </html>
@@ -84,17 +84,17 @@
     <h1><center>Các Chức Năng của Minecraft</center></h1>
     <ul>
         <li>Xây Dựng: Minecraft cho phép người chơi xây dựng mọi thứ từ vật liệu có sẵn trong thế giới game.</li>
-        <img src="C:\Users\admin\Downloads\hình minecraft lăng Bác Hồ.jpg" alt="Minecraft" width="300">
+        <img src=hình minecraft lăng Bác Hồ.jpg" alt="Minecraft" width="300">
         <li>Khai Thác: Người chơi có thể khai thác tài nguyên như gỗ, đá, vàng, kim cương từ dưới lòng đất hoặc từ các cấu trúc như mỏ đá hay rừng cây.</li>
-        <img src="C:\Users\admin\Downloads\minecraft ảnh khai thác.jpg" alt="Minecraft" width="300">
+        <img src="minecraft ảnh khai thác.jpg" alt="Minecraft" width="300">
         <li>Chế Tạo: Với tài nguyên thu thập được, người chơi có thể chế tạo ra các công cụ, vật phẩm, và khối xây dựng mới.</li>
-        <img src="C:\Users\admin\Downloads\minecraft ảnh sáng tạo.jpeg" alt="Minecraft" width="300">
+        <img src="minecraft ảnh sáng tạo.jpeg" alt="Minecraft" width="300">
         <li>Sinh Sống: Minecraft có một hệ thống sinh tồn phức tạp, bao gồm việc săn bắn, trồng cây, nuôi thú, và tạo ra các bản đồ khám phá.</li>
-        <img src="C:\Users\admin\Downloads\minecraft ảnh chăn nuôi.jpg" alt="Minecraft" width="300">
+        <img src="minecraft ảnh chăn nuôi.jpg" alt="Minecraft" width="300">
         <li>Khám Phá: Thế giới Minecraft rộng lớn và bao gồm nhiều loại môi trường và cấu trúc để người chơi khám phá.</li>
-        <img src="C:\Users\admin\Downloads\ảnh minecraft khám phá.jpg" width="300">
+        <img src="ảnh minecraft khám phá.jpg" width="300">
         <li>Chơi Trực Tuyến: Minecraft cho phép người chơi kết nối với nhau thông qua mạng internet để chơi cùng nhau hoặc thi đấu.</li>
-        <img src="C:\Users\admin\Downloads\ảnh minecraft trực tuyến.jpg" width="300">
+        <img src="Cảnh minecraft trực tuyến.jpg" width="300">
         
     </ul>
 </div>
@@ -131,7 +131,7 @@
     </ul>
 </div>
 <h1><center>Bàn phím dưới đây miêu tả rõ nhất về các nút để chơi game Minecraft</center></h1>
-<center><img src="C:\Users\admin\Downloads\ảnh minecraft bàn phím để chơi minecraft.webp" alt="Minecraft" width="1200"></center>
+<center><img src="ảnh minecraft bàn phím để chơi minecraft.webp" alt="Minecraft" width="1200"></center>
 </body>
 
 </html>
