--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <h1><center>Các Chức Năng của Minecraft</center></h1>
     <ul>
         <li>Xây Dựng: Minecraft cho phép người chơi xây dựng mọi thứ từ vật liệu có sẵn trong thế giới game.</li>
-        <img src='hình minecraft lăng Bác Hồ.jpg" alt="Minecraft" width="300">
+        <img src="hình minecraft lăng Bác Hồ.jpg" alt="Minecraft" width="300">
         <li>Khai Thác: Người chơi có thể khai thác tài nguyên như gỗ, đá, vàng, kim cương từ dưới lòng đất hoặc từ các cấu trúc như mỏ đá hay rừng cây.</li>
         <img src="minecraft ảnh khai thác.jpg" alt="Minecraft" width="300">
         <li>Chế Tạo: Với tài nguyên thu thập được, người chơi có thể chế tạo ra các công cụ, vật phẩm, và khối xây dựng mới.</li>
