--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <li>Khám Phá: Thế giới Minecraft rộng lớn và bao gồm nhiều loại môi trường và cấu trúc để người chơi khám phá.</li>
         <img src="ảnh minecraft khám phá.jpg" width="300">
         <li>Chơi Trực Tuyến: Minecraft cho phép người chơi kết nối với nhau thông qua mạng internet để chơi cùng nhau hoặc thi đấu.</li>
-        <img src="Cảnh minecraft trực tuyến.jpg" width="300">
+        <img src="ảnh minecraft trực tuyến.jpg" width="300">
         
     </ul>
 </div>
