--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     </ul>
 </div>
 <h1><center>Bàn phím dưới đây miêu tả rõ nhất về các nút để chơi game Minecraft</center></h1>
-<center><img src="C:\Users\admin\Downloads\ảnh minecraft bàn phím để chơi minecraft.webp" alt="Minecraft" width="1200"></center>
+<center><img src="ảnh minecraft bàn phím để chơi minecraft.webp" alt="Minecraft" width="1200"></center>
 </body>
 <p>Minh Thinh Web Deisgn, Copyright &copy; 2024</p>
 
