--- a/MyWebsite/HTML/huyenthoairadoi.html
+++ b/MyWebsite/HTML/huyenthoairadoi.html
@@ -41,7 +41,7 @@
       <p>Minecraft được ra mắt lần đầu vào ngày 17 tháng 5 năm 2009, dưới dạng phiên bản chơi thử miễn phí cho máy tính cá nhân. Sau đó, trò chơi đã được phát hành chính thức vào ngày 18 tháng 11 năm 2011. Từ đó đến nay, Minecraft đã phát triển rất nhiều và trở thành một trong những trò chơi điện tử sandbox phổ biến nhất trên toàn thế giới.</p>
       
   </div>
-  <center><img class="minecraft-img" src="C:\Users\admin\Downloads\MyWebsite\RES\sự ra đời của minecraft.jpg" alt="Minecraft Image"></center>
+  <center><img class="minecraft-img" src="sự ra đời của minecraft.jpg" alt="Minecraft Image"></center>
 </div>
 
 </body>
