--- a/MyWebsite/HTML/gioithieusoluoc.html
+++ b/MyWebsite/HTML/gioithieusoluoc.html
@@ -41,7 +41,7 @@
             <p>Minecraft là một trò chơi điện tử thuộc thể loại game sandbox, 1 nhánh của thế giới mở. Markus “Notch” Persson - một lập trình viên người Thụy Điển đã khai sinh ra nó và phát hành phiên bản đầu tiên trên TIGSource vào ngày 17/5/2009. Về sau game tiếp tục được phát triển và phát hành bởi Mojang vào năm 2011. Đến năm 2014 Minecraft được Microsoft mua lại bản quyền. Hiện tại game được phát hành bởi Xbox Game Studios.</p>
             <p>Nếu bạn là một fan của Minecraft, hãy khám phá thêm về thế giới đầy màu sắc này!</p>
         </div>
-        <img class="minecraft-img" src="C:\Users\admin\Downloads\MyWebsite\RES\Minecraft.webp" alt="Minecraft Image">
+        <img class="minecraft-img" src="Minecraft.webp" alt="Minecraft Image">
     </div>
 </body>
 </html>
