--- a/MyWebsite/HTML/index.html
+++ b/MyWebsite/HTML/index.html
@@ -59,17 +59,17 @@
     <h1><center>Các Chức Năng của Minecraft</center></h1>
     <ul>
         <li>Xây Dựng: Minecraft cho phép người chơi xây dựng mọi thứ từ vật liệu có sẵn trong thế giới game.</li>
-        <img src="C:\Users\admin\Downloads\MyWebsite\RES\hình minecraft lăng Bác Hồ.jpg" alt="Minecraft" width="300">
+        <img src="..\RES\hình minecraft lăng Bác Hồ.jpg" alt="Minecraft" width="300">
         <li>Khai Thác: Người chơi có thể khai thác tài nguyên như gỗ, đá, vàng, kim cương từ dưới lòng đất hoặc từ các cấu trúc như mỏ đá hay rừng cây.</li>
-        <img src="C:\Users\admin\Downloads\MyWebsite\RES\minecraft ảnh khai thác.jpg" alt="Minecraft" width="300">
+        <img src="..\RES\minecraft ảnh khai thác.jpg" alt="Minecraft" width="300">
         <li>Chế Tạo: Với tài nguyên thu thập được, người chơi có thể chế tạo ra các công cụ, vật phẩm, và khối xây dựng mới.</li>
-        <img src="C:\Users\admin\Downloads\MyWebsite\RES\minecraft ảnh sáng tạo.jpeg" alt="Minecraft" width="300">
+        <img src="..\RES\minecraft ảnh sáng tạo.jpeg" alt="Minecraft" width="300">
         <li>Sinh Sống: Minecraft có một hệ thống sinh tồn phức tạp, bao gồm việc săn bắn, trồng cây, nuôi thú, và tạo ra các bản đồ khám phá.</li>
-        <img src="C:\Users\admin\Downloads\MyWebsite\RES\minecraft ảnh chăn nuôi.jpg" alt="Minecraft" width="300">
+        <img src="..\RES\minecraft ảnh chăn nuôi.jpg" alt="Minecraft" width="300">
         <li>Khám Phá: Thế giới Minecraft rộng lớn và bao gồm nhiều loại môi trường và cấu trúc để người chơi khám phá.</li>
-        <img src="C:\Users\admin\Downloads\MyWebsite\RES\ảnh minecraft khám phá.jpg" width="300">
+        <img src="..\RES\ảnh minecraft khám phá.jpg" width="300">
         <li>Chơi Trực Tuyến: Minecraft cho phép người chơi kết nối với nhau thông qua mạng internet để chơi cùng nhau hoặc thi đấu.</li>
-        <img src="C:\Users\admin\Downloads\MyWebsite\RES\ảnh minecraft trực tuyến.jpg" width="300">
+        <img src="..\RES\ảnh minecraft trực tuyến.jpg" width="300">
         
     </ul>
 </div>
@@ -105,7 +105,7 @@
     </ul>
 </div>
 <h1><center>Bàn phím dưới đây miêu tả rõ nhất về các nút để chơi game Minecraft</center></h1>
-<center><img src="C:\Users\admin\Downloads\MyWebsite\RES\ảnh minecraft bàn phím để chơi minecraft.webp" alt="Minecraft" width="1200"></center>
+<center><img src="..\RES\ảnh minecraft bàn phím để chơi minecraft.webp" alt="Minecraft" width="1200"></center>
 </body>
 <p><center> Thinh Web Deisgn, Copyright &copy; 2024</center></p>
 
