--- a/MyWebsite/HTML/quatrinhhinhthanh.html
+++ b/MyWebsite/HTML/quatrinhhinhthanh.html
@@ -67,7 +67,7 @@
         <li>Sinh Sống: Minecraft có một hệ thống sinh tồn phức tạp, bao gồm việc săn bắn, trồng cây, nuôi thú, và tạo ra các bản đồ khám phá.</li>
         <img src="..\RES\minecraft ảnh chăn nuôi.jpg" alt="Minecraft" width="300">
         <li>Khám Phá: Thế giới Minecraft rộng lớn và bao gồm nhiều loại môi trường và cấu trúc để người chơi khám phá.</li>
-        <img src="C:\Users\admin\Downloads\MyWebsite\RES\ảnh minecraft khám phá.jpg" width="300">
+        <img src="..\RES\ảnh minecraft khám phá.jpg" width="300">
         <li>Chơi Trực Tuyến: Minecraft cho phép người chơi kết nối với nhau thông qua mạng internet để chơi cùng nhau hoặc thi đấu.</li>
         <img src="..\RES\ảnh minecraft trực tuyến.jpg" width="300">
         
