--- a/MyWebsite/HTML/huyenthoairadoi.html
+++ b/MyWebsite/HTML/huyenthoairadoi.html
@@ -20,7 +20,7 @@
              <nav>
                <ul>
                 <li><a href="Quatrinhhinhthanh.html">Quá trình hình thành</a></li>
-                 <li class="current"><a href="Huyenthoairadoi.html">Huyền thoại ra đời</a></li>
+                 <li><a class="current"><a href="Huyenthoairadoi.html">Huyền thoại ra đời</a></li>
                  <li><a href="Congdongdoso.html">Cộng đồng đồ sộ</a></li>
                 </ul>
              </nav>
