--- a/MyWebsite/HTML/huyenthoairadoi.html
+++ b/MyWebsite/HTML/huyenthoairadoi.html
@@ -8,7 +8,7 @@
      <meta name="keywords" content="web design, professional web design, thiet ke web, Game Minecraft">
      <meta name="author" content="Minh Thinh">
      <title>Minh Thinh Web Design | Thông tin</title>
-     <link rel="stylesheet" href="../CSS/style.css">s
+     <link rel="stylesheet" href="../CSS/style.css">
   </head>
 <head>
     <body>
